src/main/java/org/example/filestorageapi/errors/SessionExpiredException.java
package org.example.filestorageapi.errors;

public class SessionExpiredException extends RuntimeException {
    public SessionExpiredException(String message) {
        super(message);
    }
}
